--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@ body::before {
         <div class="social-links">
             <a href="https://www.instagram.com/trsx09/" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/174/174855.png"></a>
             <a href="https://steamcommunity.com/id/trst99/" target="_blank"><img src="steam.png"></a>
-            
+            <a href="https://tracker.gg/valorant/profile/riot/%E0%B8%AA%E0%B9%80%E0%B8%95%E0%B8%9B4%E0%B8%9E%E0%B8%B2%E0%B8%A3%E0%B8%A7%E0%B8%A2%239999/overview?platform=pc&playlist=competitive&season=3ea2b318-423b-cf86-25da-7cbb0eefbe2d" target="_blank"><img src="valorant.png"></a>
         </div>
 
         <div class="music-player">
