--- a/index.html
+++ b/index.html
@@ -420,6 +420,7 @@ body::before {
             <a href="https://www.instagram.com/trsx09/" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/174/174855.png"></a>
             <a href="https://steamcommunity.com/id/trst99/" target="_blank"><img src="steam.png"></a>
             <a href="https://tracker.gg/valorant/profile/riot/%E0%B8%AA%E0%B9%80%E0%B8%95%E0%B8%9B4%E0%B8%9E%E0%B8%B2%E0%B8%A3%E0%B8%A7%E0%B8%A2%239999/overview?platform=pc&playlist=competitive&season=3ea2b318-423b-cf86-25da-7cbb0eefbe2d" target="_blank"><img src="valorant.png"></a>
+            <a href="https://open.spotify.com/user/31lbcemjz32f242se5tijyw2of4q?si=43ca841539b94d00&nd=1&dlsi=416471e7f07c43d3" target="_blank"><img src="spotify.png"></a>
         </div>
 
         <div class="music-player">
